--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div id="eml">
                     <label for="email">E-mail  id</label>
-                    <input type="text" id="email" name="email" placeholder="e-mail" required>    
+                    <input type="email" id="email" name="email" placeholder="e-mail" required>    
                 </div>
                 <div id="addr">
                     <label for="address" class="address">Address</label>
